# ros2_task

./: .gitignore  README.md  ros2_multisensor_cpp_nodes_dbe3e4ed.plan.md
src/multisensor_bringup/: package.xml  setup.cfg  setup.py
src/multisensor_bringup/config/: fusion.yaml  monitor.yaml  sensors.yaml
src/multisensor_bringup/launch/: bringup_all.launch.py  bringup_all_cpp.launch.py  fusion.launch.py  fusion_cpp.launch.py  monitor.launch.py  monitor_cpp.launch.py  sensors.launch.py  sensors_cpp.launch.py
src/multisensor_fusion/: package.xml  setup.cfg  setup.py
src/multisensor_fusion/multisensor_fusion/: fusion_node.py  multimodal_recorder_node.py
src/multisensor_fusion/test/: test_fusion_logic.py
src/multisensor_fusion_cpp/: package.xml
src/multisensor_fusion_cpp/src/: fusion_node_cpp.cpp
src/multisensor_interfaces/: CMakeLists.txt  package.xml
src/multisensor_interfaces/action/: AdjustNodeParams.action
src/multisensor_interfaces/msg/: AlertMsg.msg  Audio.msg  AudioMsg.msg  FusionMsg.msg  FusionResult.msg  Lidar.msg  LidarMsg.msg  MultimodalSample.msg  NodeStatus.msg  NodeStatusMsg.msg  SystemAlert.msg  Vision.msg  VisionMsg.msg
src/multisensor_interfaces/srv/: GetStatus.srv  SetMonitorParam.srv
src/multisensor_monitor/: package.xml  setup.cfg  setup.py
src/multisensor_monitor/multisensor_monitor/: status_monitor_node.py
src/multisensor_monitor/test/: test_status_monitor_logic.py
src/multisensor_monitor_cpp/: package.xml
src/multisensor_sensors/: package.xml  setup.cfg  setup.py
src/multisensor_sensors_cpp/: package.xml
(+9 files in other folders)
